tests/paczka1/fuzzy1/74782146.err
Error in line 1: Oc9j69SitYt A124 36,2
Error in line 8: S428 S928 97,8
Error in line 18: repJl4J654 S928 66,22
Error in line 15: qvnw S428 16,4
Error in line 20: qvnw A124 60,7
Error in line 25: Oc9j69SitYt S428 -5,2
Error in line 4: Oc9j69SitYt S428 79,6
